# AutoDrive_frontend

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build-and-push.yml  main.yml  release.yml  tests.yml  update-readme.yml
src/: RGBD_image.py  main.py  pcd_vis.py  slam.py  utils.py
src/camera/: 2d_map.py  camera.py  camera_config.yaml
src/collector/: __init__.py
src/component/: __init__.py  mapper.py  tracker.py  visualize.py
src/componet/: tracker.py
src/slam_data/: Image.py  __init__.py  dataset.py
src/untils/: __init__.py
tests/: build_pcd.py  test_example.py
tests/collector/: __init__.py
