[tool.poetry]
name = "AutoDrive_frontend"
version = "0.1.0"
description = ""
authors = ["Atticuszz <1831768457@qq.com>"]
readme = "README.md"
packages = [{include = "src", from = "."}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11.0 || >3.11.0"
numpy = "^1.26.4"
opencv-contrib-python-headless = "^4.9.0.80"
matplotlib = "^3.8.4"
natsort = "^8.4.0"
open3d = "^0.18.0"
scikit-learn = "^1.4.2"
addict = "^2.4.0"
pandas = "^2.2.2"
tqdm = "^4.66.2"
mpld3 = "^0.5.10"





[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pre-commit = "^3.7.0"
pytest-cov = "^4.1.0"
scalene = "^1.5.40"
pyqt6 = "^6.7.0"

[tool.poetry.scripts]
tests = 'poetry_scripts:run_tests'

#[tool.semantic_release]
#version_variable = "pyproject.toml:tool.poetry.version"
#branch = "main"
#upload_to_PyPI = false  # 禁用上传到 PyPI
#upload_to_release = true  # 启用上传到 GitHub Releases
#build_command = "pip install poetry && poetry build"
#commit_message = "chore(release): bump version to v{version}"
#changelog_components = "semantic_release.changelog.changelog_headers,semantic_release.changelog.compare_url"
#changelog_file = "CHANGELOG.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
